<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weather.WeatherFragment">

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather_icon_404"
        android:src="@mipmap/weather_sun"
        app:layout_constraintBottom_toBottomOf="@+id/weather_temperature"
        app:layout_constraintStart_toStartOf="@+id/weather_location"
        app:layout_constraintTop_toTopOf="@+id/weather_temperature" />

    <TextView
        android:id="@+id/weather_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/weather_temperature_404"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weather_icon"
        app:layout_constraintTop_toBottomOf="@+id/weather_day"
        tools:text="80°" />

    <TextView
        android:id="@+id/weather_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/weather_location_404"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/weather_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Provo, Utah" />

    <TextView
        android:id="@+id/weather_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weather_404"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/weather_temperature"
        app:layout_constraintStart_toStartOf="@+id/weather_location"
        app:layout_constraintTop_toBottomOf="@+id/weather_location"
        tools:text="Wednesday 4PM" />

    <TextView
        android:id="@+id/weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/weather_404"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/weather_day"
        app:layout_constraintEnd_toEndOf="@+id/weather_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/weather_day"
        app:layout_constraintTop_toTopOf="@+id/weather_day"
        tools:text="Sunny" />
</androidx.constraintlayout.widget.ConstraintLayout>